Fixed grid gaps

--- a/src/components/Feed/Group.scss
+++ b/src/components/Feed/Group.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 .layout-icon {
   background: #fff;
   border-radius: 100%;
@@ -44,7 +46,7 @@
   @include media-breakpoint-down(sm) {
     .col-lg-12 {
       .row {
-        margin: 0 0 0 divide(-$container-padding-x, 2);
+        margin: 0 0 0 math.div(-$container-padding-x, 2);
       }
     }
   }
