--- a/src/components/HeaderNav/TopicsNav.module.scss
+++ b/src/components/HeaderNav/TopicsNav.module.scss
@@ -1,6 +1,8 @@
+@use 'sass:math';
+
 .Topics {
   @include media-breakpoint-down(sm) {
-    padding: 0 divide($container-padding-x, 2);
+    padding: 0 math.div($container-padding-x, 2);
   }
 
   @include media-breakpoint-up(md) {
