--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -14,6 +14,10 @@
     @include make-col-ready;
   }
 
+  @include media-breakpoint-down(sm) {
+    margin-left: -1rem;
+    margin-right: -1rem;
+  }
 }
 
 // Генерация только используемых классов колонок
@@ -22,9 +26,9 @@
 
   @include media-breakpoint-up($breakpoint, $grid-breakpoints) {
     .col#{$infix} {
-      flex: 1 0 0%;
+      flex: 1 0 0;
     }
-    
+
     .col#{$infix}-auto {
       flex: 0 0 auto;
       width: auto;
