--- a/src/styles/views/Search.module.scss
+++ b/src/styles/views/Search.module.scss
@@ -1,7 +1,9 @@
+@use 'sass:math';
+
 .search-form {
   @include media-breakpoint-down(sm) {
-    margin-left: divide(-$container-padding-x, 2);
-    margin-right: divide(-$container-padding-x, 2);
+    margin-left: math.div(-$container-padding-x, 2);
+    margin-right: math.div(-$container-padding-x, 2);
   }
 
   display: flex;
